[+] ну типа всякое... я хз как описать, я забыл комитить это говно

--- a/PackageUniverse.ApiService/appsettings.json
+++ b/PackageUniverse.ApiService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "packagedb": "Host=localhost;Database=packagedb;Username=postgres;Password=password"
+  },
   "AllowedHosts": "*"
 }
