--- a/PackageUniverse.AppHost/PackageUniverse.AppHost.csproj
+++ b/PackageUniverse.AppHost/PackageUniverse.AppHost.csproj
@@ -1,24 +1,33 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
+	<Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <IsAspireHost>true</IsAspireHost>
-    <UserSecretsId>e7266381-09e6-4e3c-b08f-b1b4bb17a3cb</UserSecretsId>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<IsAspireHost>true</IsAspireHost>
+		<UserSecretsId>e7266381-09e6-4e3c-b08f-b1b4bb17a3cb</UserSecretsId>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\PackageUniverse.ApiService\PackageUniverse.ApiService.csproj" />
-    <ProjectReference Include="..\PackageUniverse.Web\PackageUniverse.Web.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\PackageUniverse.ApiService\PackageUniverse.ApiService.csproj" />
+		<ProjectReference Include="..\PackageUniverse.MigrationService\PackageUniverse.MigrationService.csproj" />
+		<ProjectReference Include="..\PackageUniverse.Web\PackageUniverse.Web.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\PackageUniverse.Infrastructure\PackageUniverse.Infrastructure.csproj">
+			<ReferenceOutputAssembly>True</ReferenceOutputAssembly>
+			<IsAspireProjectResource>false</IsAspireProjectResource>
+		</ProjectReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Aspire.Hosting.AppHost" Version="9.2.0" />
+		<PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.2.0" />
+		<PackageReference Include="Aspire.Hosting.Redis" Version="9.2.0" />
+	</ItemGroup>
 
 </Project>
