--- a/PackageUniverse.ApiService/appsettings.json
+++ b/PackageUniverse.ApiService/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "NuGet": {
+    "CatalogsUri": "https://api.nuget.org/v3/catalog0/index.json"
+  },
   "ConnectionStrings": {
     "packagedb": "Host=localhost;Database=packagedb;Username=postgres;Password=password"
   },
